--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 fastapi
 uvicorn
 python-multipart
+pydantic
+pydantic_settings
+load_dotenv
+alembic
+tenacity
+psycopg2-binary 
+sqlalchemy[mypy]
+datetime
+python-jose[cryptography]
+passlib[bcrypt]
