--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,6 @@ uvicorn
 python-multipart
 pydantic
 pydantic_settings
-load_dotenv
-alembic
-tenacity
 psycopg2-binary 
-sqlalchemy[mypy]
-datetime
-python-jose[cryptography]
-passlib[bcrypt]
+sqlalchemy
+alembic
